# sitegen-app

./: .gitignore  README.md  pyproject.toml
src/: copystatic.py  gencontent.py  htmlnode.py  inline_markdown.py  main.py  markdown_blocks.py  sitegen.py  test_htmlnode.py  test_inline_markdown.py  test_markdown_blocks.py  test_textnode.py  textnode.py
src/sitegen/: gencontent.py  inline_markdown.py  markdown_blocks.py  sitegen.py  template.py  test_htmlnode.py  test_inline_markdown.py  test_markdown_blocks.py  test_textnode.py  textnode.py
static/: bs.txt
